Modify .gitignore to untrack unwanted files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .vs/
 assettrackerAPI/AssetTrackerApis/App_Start/WebApiConfig.cs
+assettrackerAPI/AssetTrackerApis/obj/
+assettrackerAPI/AssetTrackerApis/bin/
+
